# UnforgettableEvilBot

./: .bandit  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  COOLIFY_DEPLOYMENT.md  DEPLOYMENT.md  DOCKER_COMPOSE_IMPROVEMENTS.md  DOCKER_OPTIMIZATION_SUMMARY.md  Dockerfile  README.md  README_REPOSITORIES.md  WHATSAPP_BRIDGE_TROUBLESHOOTING.md  WHATSAPP_INTEGRATION.md  alembic.ini  create_fresh_db.py  db_utils.py  debug_db.py  debug_imports.py  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  logging.conf  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_database.py  start_local.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 21317db18350_initial_tables.py  2bffd4260324_add_openai_metrics_table.py  3e7da6056948_add_resource_savings_table.py  49d95ee9b45d_add_whatsapp_monitoring_fields.py  4fb32425e140_add_custom_name_to_monitored_chats.py  add_digest_preferences_and_whatsapp_phones.py  b2419b8e0ca6_add_performance_indexes.py
app/: dependencies.py  state.py
app/api/: admin_routes.py  auth.py  auth_routes.py  dashboard.py  health.py  monitoring.py  user_routes.py  users.py  web.py  webhooks.py  whatsapp.py  whatsapp_webhooks.py
app/auth/: admin_auth.py  security.py
app/core/: __init__.py  alerts.py  async_processor.py  base_service.py  cache.py  data_cleanup.py  decorators.py  metrics.py  openai_monitoring.py  optimized_repositories.py  repositories.py  repository_factory.py  resource_savings.py  tracing.py  user_utils.py  validators.py
app/database/: connection.py
app/health/: checks.py
app/middleware/: circuit_breaker.py  openai_rate_limiter.py  rate_limiter.py
app/models/: database.py  schemas.py
app/openai_service/: analyzer.py  client.py  service.py
app/scheduler/: digest_scheduler.py
app/telegram/: service.py
app/whatsapp/: official_service.py  service.py
config/: logging_config.py  settings.py
docker/: start.sh
docs/: PRE_COMMIT_SETUP.md
scripts/: manage_test_db.sh  run_bridge_tests.py  run_tests.sh
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_admin_workflow.py  test_digest_flow.py  test_health_and_monitoring.py  test_whatsapp_message_flow.py
tests/integration/: README.md  conftest.py  test_api_integration.py  test_bridge_connectivity.py  test_database_integration.py  test_external_services_integration.py  test_health_and_metrics.py  test_workflow_integration.py
tests/unit/: __init__.py  conftest.py  test_admin_auth.py  test_admin_routes.py  test_auth_routes.py  test_base_service.py  test_bridge_configuration.py  test_cache.py  test_dashboard_route.py  test_data_cleanup.py  test_database_connection.py  test_dependencies.py  test_digest_scheduler.py  test_health_checks.py  test_health_routes.py  test_metrics.py  test_middleware.py  test_monitoring_routes.py  test_openai_client.py  test_openai_monitoring.py  test_openai_service.py  test_optimized_repositories.py  test_rate_limiter.py  test_repositories.py  test_repository_factory.py  test_resource_savings.py  test_security_validators.py  test_startup_script.py  test_telegram_service.py  test_user_routes.py  test_user_utils.py  test_validators.py  test_whatsapp_service.py  test_whatsapp_webhooks.py
web/static/css/: admin.css
web/static/js/: admin.js
web/templates/: admin_login.html  base.html  dashboard.html  monitoring_dashboard.html  resource_savings.html  user_detail.html  users.html
whatsapp_bridge/: IMPLEMENTATION_SUMMARY.md  README.md  bridge.js  client_states.json.backup  package-lock.json  package.json  package.json.backup  persistent_bridge.js
